# multi-agent-code-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent-manager  Dockerfile.dev  Dockerfile.discovery  Dockerfile.fastmcp  Dockerfile.knowledge-graph  Dockerfile.mcp  Dockerfile.message-bus  Dockerfile.milvus  Dockerfile.test  README.md  analyze_repo.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.mcp.sh  entrypoint.sh  init-neo4j.sh  prompt.txt  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh  test_analyzer.py  test_milvus.py  wait_for_neo4j.py
alertmanager/: alertmanager.yml
configs/: milvus.yaml
grafana/dashboards/: mcp_dashboard.json  service_metrics.json  service_monitoring.json  system_metrics.json
grafana/provisioning/dashboards/: agent_metrics.json  code_quality_metrics.json
grafana/provisioning/datasources/: prometheus.yml
prometheus/: alertmanager.yml  prometheus.yml
prometheus/alertmanager/templates/: default.tmpl
prometheus/rules/: alerts.yml  recording.yml
scripts/: check_services.sh  demo_agents.py  run_system.py  run_tests.py  test_integration.py  verify_docker.sh
src/: main.py  setup.py
src/multi_agent_code_analyzer/: Dockerfile  Dockerfile.agent-manager  Dockerfile.discovery  Dockerfile.fastmcp  Dockerfile.message-bus  __init__.py  config.py  main.py  network.py  requirements.txt  server.py
src/multi_agent_code_analyzer/adaptability/: dynamic_config.py
src/multi_agent_code_analyzer/agents/: __init__.py  (+16 more)
src/tests/: test_setup.py
tests/: test_integration.py  test_system.py
(+61 files in other folders)
