[tool.poetry]
name = "multi-agent-code-analyzer"
version = "0.1.0"
description = "A multi-agent system for analyzing and understanding large codebases"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.184"
openai = "^0.27.0"
networkx = "^3.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"