[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-code-analyzer"
version = "0.1.0"
authors = [
    { name="Adam Kumm", email="akumm7491@gmail.com" },
]
description = "A system for analyzing code using multiple agents"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/akumm7491/multi-agent-code-analyzer"
"Bug Tracker" = "https://github.com/akumm7491/multi-agent-code-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["multi_agent_code_analyzer*"]
namespaces = false